# yngdieng

./: .bazelignore  .bazeliskrc  .bazelrc  .blazerc  .clang-format  .editorconfig  .gitignore  .kodiak.toml  .mergify.yml  .prettierrc  BUILD.bazel  LICENSE  README.md  WORKSPACE  angular.json  azure-pipelines.yml  bundle.sh  copy_protos.sh  docker-compose.yaml  docker_build.sh  docker_run.sh  dotnet-format.sh  nuget2config.json  package-lock.json  package.json  renovate.json  run_backend.sh  status.sh  tsconfig.json  web_deploy.sh  x.txt  yngping_variants.workbook
TEST/: Program.cs  (+2 more)
web/e2e/: BUILD.bazel  jest.bzl  jest.config.js  protractor.conf.js  protractor.on-prepare.js  setupTests.js  tsconfig.json
web/e2e/src/: app.e2e-spec.ts  app.po.ts
web/e2e/src/snapshot/: a.test.js
web/src/: BUILD.bazel  custom-theme.scss  index.html  main.dev.ts  main.prod.ts  manifest.json  ngx-infinite-scroll_shim.js  polyfills.ts  robots.staging.txt  rollup.config.js  styles.scss  test.ts
web/src/.storybook/: main.js  preview-body.html  preview-head.html  preview.js  tsconfig.json
web/src/app/: BUILD  advanced-search-query-builder.service.spec.ts  advanced-search-query-builder.service.ts  app-routing.module.ts  app.component.html  app.component.scss  app.component.spec.ts  app.component.ts  app.module.ts  html-title.ts  local-storage.service.ts  phonology_pb.js  richtext-flatten.pipe.spec.ts  richtext-flatten.pipe.ts  services_pb.js  sidenav-state.service.spec.ts  user-settings.service.ts  yngdieng-backend.service.spec.ts  yngdieng-backend.service.ts  yngdieng-client.ts  yngdieng-title.service.ts
web/src/app/about/: about.component.html  about.component.spec.ts  about.component.ts
web/src/app/advanced-search-landing/: advanced-search-landing.component.html  advanced-search-landing.component.spec.ts  advanced-search-landing.component.ts
web/src/app/audio-ack-dialog/: audio-ack-dialog.component.html  audio-ack-dialog.component.scss  audio-ack-dialog.component.spec.ts  audio-ack-dialog.component.ts
web/src/app/audio-alert-dialog/: audio-alert-dialog.component.html  audio-alert-dialog.component.spec.ts  audio-alert-dialog.component.ts
web/src/app/audio-player/: audio-player.component.html  audio-player.component.scss  audio-player.component.spec.ts  audio-player.component.ts
web/src/app/common/: converters.ts  hanzi-util.ts  resource-names.ts  view-models.ts
web/src/app/common-toolbar/: common-toolbar.component.html  common-toolbar.component.scss  common-toolbar.component.spec.ts  common-toolbar.component.ts  common-toolbar.stories.ts  perform-search-event.ts
web/src/app/contrib-explanation/: contrib-explanation.component.html  contrib-explanation.component.spec.ts  contrib-explanation.component.ts
web/src/app/debug-info/: debug-info.component.html  debug-info.component.spec.ts  debug-info.component.ts
web/src/app/details-feng/: details-feng.component.html  details-feng.component.scss  details-feng.component.spec.ts  details-feng.component.ts  feng-resolver.service.ts
web/src/app/details-mono-hanzi/: details-mono-hanzi.component.html  details-mono-hanzi.component.scss  details-mono-hanzi.component.spec.ts  details-mono-hanzi.component.ts
web/src/app/end-of-results-card/: end-of-results-card.component.html  end-of-results-card.component.spec.ts  end-of-results-card.component.ts  end-of-results-card.stories.ts
web/src/app/feng-explanation/: feng-explanation.component.html  feng-explanation.component.scss  feng-explanation.component.spec.ts  feng-explanation.component.ts
web/src/app/feng-result/: feng-result.component.html  feng-result.component.scss  feng-result.component.spec.ts  feng-result.component.ts
web/src/app/generic-message-card/: generic-message-card.component.html  generic-message-card.component.spec.ts  generic-message-card.component.ts
web/src/app/hanzi-canvas-dialog/: hanzi-canvas-dialog.component.html  hanzi-canvas-dialog.component.scss  hanzi-canvas-dialog.component.ts
web/src/app/help/: help.component.html  help.component.scss  help.component.spec.ts  help.component.ts  help.stories.ts
web/src/app/historical-details/: historical-details.component.html  historical-details.component.spec.ts  historical-details.component.ts
web/src/app/home/: home.component.html  home.component.sass  home.component.scss  home.component.spec.ts  home.component.ts  home.stories.ts
web/src/app/loading-card/: loading-card.component.html  loading-card.component.scss  loading-card.component.spec.ts  loading-card.component.ts
web/src/app/mono-hanzi-result/: mono-hanzi-result.component.html  mono-hanzi-result.component.scss  mono-hanzi-result.component.ts
web/src/app/no-results-card/: no-results-card.component.html  no-results-card.component.spec.ts  no-results-card.component.ts
web/src/app/phonology-composer/: phonology-composer.component.html  phonology-composer.component.scss  phonology-composer.component.spec.ts  phonology-composer.component.ts
web/src/app/phonology-query-renderer/: phonology-query-renderer.component.html  phonology-query-renderer.component.spec.ts  phonology-query-renderer.component.ts
web/src/app/sandhi-tool/: sandhi-tool.component.html  sandhi-tool.component.scss  sandhi-tool.component.ts
web/src/app/search-landing/: search-landing.component.html  search-landing.component.sass  search-landing.component.scss  search-landing.component.spec.ts  search-landing.component.ts
web/src/assets/: BUILD
web/src/environments/: BUILD  environment.dev.ts  environment.prod.ts  environment.staging.ts  environment.ts
web/src/lib/: BUILD.bazel  explanations.ts  rich-text.ts  utils.spec.ts  utils.ts
web/src/material/: BUILD  material.module.ts
web/src/protos/: BUILD  settings.proto
web/src/static/: index.html  index.prod.html  index.staging.html
web/src/stories/: BUILD  Button.stories.ts  Header.stories.ts  Introduction.stories.mdx  Page.stories.ts  button.component.ts  header.component.ts  page.component.ts
web/src/yngdieng/: BUILD.bazel  documents_pb.js  explanations.ts  query-parser.spec.ts  query-parser.ts  utils.spec.ts  utils.ts
(+558 files in other folders)
