load("@npm//@bazel/typescript:index.bzl", "ts_library")
load("@npm//@bazel/jasmine:index.bzl", "jasmine_node_test")

ts_library(
    name = "lib",
    srcs = [
        "explanations.ts",
        "rich-text.ts",
        "utils.ts",
    ],
    module_name = "@yngdieng-shared-lib",
    visibility = ["//visibility:public"],
    deps = [
        "//shared:documents_ts_proto",
        "//shared/zingzeudata:explanation_ts_proto",
        "//yngdieng/frontend/v3:service_ts_proto",
    ],
)

ts_library(
    name = "tests_ts",
    srcs = glob(["**/*.spec.ts"]),
    deps = [
        ":lib",
        "//shared:documents_ts_proto",
        "@npm//:node_modules",
    ],
)

jasmine_node_test(
    name = "tests",
    srcs = glob(["**/*.spec.js"]),
    deps = [
        ":tests_ts",
    ],
)
