load("@npm_bazel_typescript//:index.bzl", "ts_library")
load("@npm_bazel_jasmine//:index.bzl", "jasmine_node_test")
load("@rules_typescript_proto//:index.bzl", "typescript_proto_library")

# Examples:
# https://github.com/bazelbuild/rules_nodejs/blob/master/examples/protocol_buffers/BUILD.bazel
# https://github.com/Dig-Doug/rules_typescript_proto/blob/bb9ff5a2f7f629276a8da796bf8a77987e95ca67/test/BUILD.bazel#L128

ts_library(
    name = "lib",
    srcs = [
        "explanations.ts",
        "utils.ts",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":documents_proto_ts",
        ":explanation_proto_ts",
        ":services_grpc_ts",
    ],
)

ts_library(
    name = "tests_ts",
    srcs = glob(["**/*.spec.ts"]),
    deps = [
        ":documents_proto_ts",
        ":lib",
        "@npm//:node_modules",
    ],
)

typescript_proto_library(
    name = "services_grpc_ts",
    proto = "//shared:services_proto",
    visibility = ["//visibility:public"],
)

typescript_proto_library(
    name = "documents_proto_ts",
    proto = "//shared:documents_proto",
    visibility = ["//visibility:public"],
)

typescript_proto_library(
    name = "explanation_proto_ts",
    proto = "//shared/zingzeudata:explanation_proto",
    visibility = ["//visibility:public"],
)

jasmine_node_test(
    name = "tests",
    srcs = glob(["**/*.spec.js"]),
    deps = [
        ":tests_ts",
    ],
)
