load("@npm//@bazel/typescript:index.bzl", "ts_library")
load("@npm//@bazel/jasmine:index.bzl", "jasmine_node_test")

ts_library(
    name = "lib",
    srcs = [
        "explanations.ts",
        "utils.ts",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":documents_proto_ts",
        ":explanation_proto_ts",
        ":services_grpc_ts",
    ],
)

ts_library(
    name = "tests_ts",
    srcs = glob(["**/*.spec.ts"]),
    deps = [
        ":documents_proto_ts",
        ":lib",
        "@npm//:node_modules",
    ],
)

jasmine_node_test(
    name = "tests",
    srcs = glob(["**/*.spec.js"]),
    deps = [
        ":tests_ts",
    ],
)
